--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,7 +7,7 @@
 <h5>Středa, 15. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kulajda</strong>
+<strong>Gulášová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
@@ -52,7 +52,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 15.9.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Fazolová polévka s opečenou klobásou a nokem ze zakysané smetany v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Fazolová polévka s opečenou klobásou a nokem ze zakysané smetany samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí roastbeef, pečené batátáy, polníček, wasabi majonéza <em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Krůtí prso v tamarindové omáčce se zázvorem, jasmínová rýže, kimchi salát <em title="Ryby">4</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Falafel s lilkovým baba ganoush, pita chléb, čerstvá zelenina  <em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta se šunkou/vajíčkem, sýrem a čerstvou zeleninou <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>200g Ovocný salát</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>100g Míša dort <em title="Mléko">7</em></div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">8. </span>100g Žitný koláč s černým rybízem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -121,7 +171,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 139</li><li>Ceviche z cerstve bile tresky se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 169</li><li>Rostbif z hoveziho valecku, libanonska cervena cocka se zeleninou, arabsky chleb, salatek {L} 139</li><li>Maghrebska pikantni danci saksuka s rajcaty, paprikami, lilky a harissou, zapecena s vejcem a balkanskym syrem, bulgur, salatek {L} 165</li><li>Smazena hliva a zampiony, stouchane brambory s kapustou, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny cerstvy pstruh s citronem a petrzelkovym pestem, bramborovy salat s krenem, cervenou repou, zelenymi bylinkami a majonezou 139</li><li>Smazeny filet z cerstve tresky tmave v pivnim testicku s celozrnnou horcici, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou {L} 169</li><li>Pecena panenska svickova s omackou teryiaki, prazenym sezamem a zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Peceny kralik al Cacciatore {po myslivecku} na cervenem vine s paprikami, rajcaty, tymianem, slaninou a cernymi olivami, pohanka se smazenou cibulkou, salatek 169</li><li>Smazene indicke brokolicove placicky s hrachem, ajowanem a petrzelkou, zeleninove birjany z basmati ryze, jogurtovy dip, salatek 139 </li></ol>
 </td>
 </tr>
 </table>
