--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 15. 09. 2021</h5>
+<h5>Čtvrtek, 16. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Gulášová</strong>
@@ -50,56 +50,10 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 15.9.2021</div>
+<div class="nadpis">Čtvrtek 16.9.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Fazolová polévka s opečenou klobásou a nokem ze zakysané smetany v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Fazolová polévka s opečenou klobásou a nokem ze zakysané smetany samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí roastbeef, pečené batátáy, polníček, wasabi majonéza <em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Krůtí prso v tamarindové omáčce se zázvorem, jasmínová rýže, kimchi salát <em title="Ryby">4</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Falafel s lilkovým baba ganoush, pita chléb, čerstvá zelenina  <em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta se šunkou/vajíčkem, sýrem a čerstvou zeleninou <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>200g Ovocný salát</div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">7. </span>100g Míša dort <em title="Mléko">7</em></div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">8. </span>100g Žitný koláč s černým rybízem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
+<div class="polozka"><span class="poradi">1. </span>Velice se omlouváme, dnes máme z technických důvodů zavřeno. Budeme se na Vás těšit zase zítra. Děkujeme za pochopení. </div>
 <div class="clear"></div>
 </li>
 </ul>
@@ -113,10 +67,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pórková s karotkou a vejcem</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový krém s krutony</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Těstoviny linguine s bolonským ragú, strouhaný sýr</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová smetanová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněný paprikový lusk v rajské omáčce, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu, pečené brambory s kmínem, česnekový dip</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Sekaný vepřový biftek z grilu, grilovaná zelenina sypaná parmazánem, sázené vejce</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené řízky z kuřecích prsou obalené v cornflakes s z vepřové pečeně obalené ve strouhance, bramborová kaše s máslem, citrón</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">750g</td><td class="menuName">Pečené vepřové koleno, beraní roh, cibule, hořčice, křen, smažené bramborové plátky</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí gyros v pšeničné tortille s čerstvou zeleninou, ochucený česnekovým dresinkem, smažené bramborové hranolky, zakysaná smetana</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný bylinkovým dresinkem, hermelín v těstíčku, brusinkové žerve, vařené vejce</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Tvarohový míša řez</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 11° - ležák</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Extra chmelená 12°</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Malinovka</td><td class="menuPrice">25,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Roláda z vepřové pečeně plněná anglickou slaninou, kyselou okurkou a klobásou, šťouchané brambory s cibulí</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Štěpánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rizoto s kuřecím masem a zeleninou, strouhaný sýr, kyselá okurka</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s červenou cibulí, grilované brambory, volské oko</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, hráškové pyré se sýrem, vařené vejce, plátky slaniny, strouhaný parmazán</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili se sýrovou omáčkou, filírovaná kuřecí prsa, růžový pepř</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na fazolových luscích s kukuřicí, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný olivovým olejem, smažené kuřecí stripsy, vařené vejce</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Tvarohový míša řez</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 11° - ležák</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Extra chmelená 12°</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Malinovka</td><td class="menuPrice">25,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -159,6 +113,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Hovězí vývar se zeleninou, masem a širokými nudlemi 1a,3,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažené kuřecí řízečky s naším bramborovým salátem se zeleninou, vejci a majonézou, citron 1a,3,7,9,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Grilovaná vepřová krkovice v pepřovém koření s farmářskými brambory s anglickou slaninou a cibulí, křenová majonéza 3,7,10</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Bramborové noky se smetanovou omáčkou z modrého sýra s vlašskými ořechy a rukolovými listy 1a,3,7,8c </td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
