--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Čtvrtek, 16. 09. 2021</h5>
+<h5>Pátek, 17. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Hrášková</strong>
@@ -50,13 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 16.9.2021</div>
+<div class="nadpis">Pátek 17.9.2021</div>
 <ul>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>Velice se omlouváme, dnes máme z technických důvodů zavřeno. Budeme se na Vás těšit zase zítra. Děkujeme za pochopení. </div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -67,10 +63,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový krém s krutony</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborový krém s bramborovým chipsem</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Roláda z vepřové pečeně plněná anglickou slaninou, kyselou okurkou a klobásou, šťouchané brambory s cibulí</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Štěpánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rizoto s kuřecím masem a zeleninou, strouhaný sýr, kyselá okurka</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s červenou cibulí, grilované brambory, volské oko</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, hráškové pyré se sýrem, vařené vejce, plátky slaniny, strouhaný parmazán</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili se sýrovou omáčkou, filírovaná kuřecí prsa, růžový pepř</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na fazolových luscích s kukuřicí, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný olivovým olejem, smažené kuřecí stripsy, vařené vejce</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Tvarohový míša řez</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 11° - ležák</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Extra chmelená 12°</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Malinovka</td><td class="menuPrice">25,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Steak z vepřové pečeně na jemné pepřové omáčce, restované špecle </td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený kynutý koláč s tvarohem a naší banánovou marmeládou</td><td class="menuPrice">21,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová plec na paprice, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové šišky, dušené bílé zelí</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na tálu s opečenou klobásou, pečené brambory s kmínem, chilli dip</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z kuřecích prsou na jemné hořčicové omáčce, květákové pyré, grilované rajče, volské oko</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené šunkofleky se smetanou, kyselá okurka</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstovinový salát se zeleninou, ochucený česnekovým dresingem, plátkovaná vepřová panenka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Tvarohový míša řez</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 11° - ležák</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Extra chmelená 12°</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Malinovka</td><td class="menuPrice">25,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -113,6 +109,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Italská minestrone s parmazánem 7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Trhané kuřecí stehno na domácím langoši s česnekovým zákysem, strouhaným sýrem a mladou cibulkou 1a,3,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažený sýrový špíz se šunkou s hranolky a naší tatarskou omáčkou 1a,3,7,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Pečený anglický roastbeef na zeleninovém salátu s dijonským dresinkem, červenou cibulkou a rozpečenou bagetou 1a,3,6,7,10</td><td class="pricem">139 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
